2010-06-17  Ada Chan  <adachan@apple.com>

        Rolling out http://trac.webkit.org/changeset/61297 due to build errors.

        * WebKit2.xcodeproj/project.pbxproj:
        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp: Removed.
        * WebProcess/InjectedBundle/API/c/WKBundlePage.h: Removed.
        * WebProcess/InjectedBundle/InjectedBundlePageClient.cpp: Removed.
        * WebProcess/InjectedBundle/InjectedBundlePageClient.h: Removed.
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::dispatchDidClearWindowObjectInWorld):
        * WebProcess/WebPage/WebPage.cpp:
        * WebProcess/WebPage/WebPage.h:
        * mac/WebKit2.exp:
        * win/WebKit2.vcproj:

2010-06-15  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for <rdar://problem/8010805>
        Assertion failure ("mainThreadPthread") in isMainThread() mousing over cnn.com in Mini Browser

        Don't use WebCore::String::operator NSString*() from the UIProcess, since it uses
        StringImpl::createCFString() which expects to be called from WebCore's main thread.

        * UIProcess/API/mac/PageClientImpl.h:
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::nsStringFromWebCoreString):
        (WebKit::PageClientImpl::toolTipChanged):
        * UIProcess/API/mac/WKView.mm:
        (-[WKView view:stringForToolTip:point:userData:]):

2010-06-15  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=40630
        WebKit2: Add mechanism to inject code into the WebProcess on startup

        Add initial InjectedBundle support.

        * Shared/CoreIPCSupport/WebProcessMessageKinds.h:
        (WebProcessMessage::):
        Add new LoadInjectedBundle message kind.

        * UIProcess/API/C/WKContext.cpp:
        (toWK):
        (WKContextCreate):
        (WKContextCreateWithInjectedBundlePath):